src/objects/Area_Type__c.object
<CustomObject>
    <fields>
        <fullName>RDS_Area_Code__c</fullName>
        <label>Area  Code</label>
        <length>3</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RDS_Area_Type_Description__c</fullName>
        <label>Area Type Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RDS_Is_Plot_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Plot Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RDS_Master_config__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master config</label>
        <referenceTo>Master__c</referenceTo>
        <relationshipLabel>Area Types</relationshipLabel>
        <relationshipName>Area_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Area Type</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Area Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Area Types</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>